--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.0",
+    "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
     "sass": "^1.57.0",
     "sweetalert2": "^11.4.8"
   },
